learn-terraform-provision-eks-cluster/drogva/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  selector:
    app: spring-boot-load
  ports:
    - port: 80
      targetPort: 8080
